# Smart-Contracts-Examples

./: README.md
demo-sails-staking-broker/: .gitignore  Cargo.toml  README.md  build.rs  demo_sails_staking_broker.idl  rust-toolchain.toml  rustfmt.toml
demo-sails-staking-broker/app/: Cargo.toml
demo-sails-staking-broker/app/src/: lib.rs
demo-sails-staking-broker/app/src/services/: contract_service.rs  mod.rs
demo-sails-staking-broker/app/src/state/: mod.rs
demo-sails-staking-broker/client/: Cargo.toml  build.rs
demo-sails-staking-broker/client/src/: lib.rs
demo-sails-staking-broker/src/: lib.rs
