[package]
name = "demo-sails-staking-broker"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["client", "app"]


[workspace.dependencies]
gbuiltin-staking = "1.9.1"
sails-rs = "0.9.1"
sails-idl-gen = "0.9.1"
sails-client-gen = "0.9.1"
gstd = "1.9.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
mockall = "0.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
contract-app = { path = "app" }

[build-dependencies]
contract-app = { path = "app" }
sails-rs = { version = "0.9.1", features = ["wasm-builder"] }
sails-idl-gen = "0.9.1"
sails-client-gen = "0.9.1"

[dev-dependencies]
demo-sails-staking-broker = { path = ".", features = ["wasm-binary"] }
contract-client = { path = "client" }
sails-rs = { version = "0.9.1", features = ["gtest", "gclient"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gstd = "1.9.1"
gclient = "1.9.1"
gear-core = "1.9.1"

[features]
wasm-binary = []