[package]
name = "demo-sails-staking-broker-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = { workspace = true, optional = true }
sails-rs.workspace = true

[build-dependencies]
demo-sails-staking-broker-app = { path = "../app" }
sails-client-gen.workspace = true
sails-idl-gen.workspace = true

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
